@@ -1,8 +1,5 @@
 /*
- * Original Author -> Harry Yang (taketoday@foxmail.com) https://taketoday.cn
- * Copyright © Harry Yang & 2017 - 2023 All Rights Reserved.
- *
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER
+ * Copyright 2017 - 2024 the original author or authors.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -15,19 +12,17 @@
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see [http://www.gnu.org/licenses/]
+ * along with this program. If not, see [https://www.gnu.org/licenses/]
  */
 
 package cn.taketoday.core.ssl;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Set;
 
 import javax.net.ssl.SSLEngine;
 
 import cn.taketoday.lang.Nullable;
-import cn.taketoday.util.CollectionUtils;
 import cn.taketoday.util.StringUtils;
 
 /**
@@ -43,7 +38,7 @@ public interface SslOptions {
   /**
    * {@link SslOptions} that returns {@code null} results.
    */
-  SslOptions NONE = of((Set<String>) null, (Set<String>) null);
+  SslOptions NONE = of((String[]) null, null);
 
   /**
    * Return if any SSL options have been specified.
@@ -119,7 +114,7 @@ public interface SslOptions {
    */
   @Nullable
   static Set<String> asSet(@Nullable String[] array) {
-    return array != null ? Collections.unmodifiableSet(CollectionUtils.newLinkedHashSet(array)) : null;
+    return array != null ? Set.of(array) : null;
   }
 
   @Nullable
